[package]
name = "iron_paddle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_ggrs = { version = "0.14", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.8.0", features = ["ggrs"] }
bevy_prototype_lyon = "0.10.0"
bytemuck = { version = "1.7", features = ["derive"] }
ggrs = "0.10"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
